[tool.poetry]
name = "mongo-test"
version = "0.1.0"
description = ""
authors = ["Breno Batista Campos <brenobatistacampos@gmail.com>"]
readme = "README.md"
packages = [{include = "mongo_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
pymongo = "^4.3.2"
tweepy = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
